--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/project-2.jpg');"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/2.JPG" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images/6.JPG" alt="Image"/></a></div>
           <div class="h2 title">MURHULA KALALA Lucien</div>
           <p class="category text-white">Web Developer, Graphic Designer, Translator</p>
-          <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
+          <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Engager Moi</a>
           <!-- <a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a> -->
         </div>
       </div>
@@ -473,7 +473,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="row">
-              <div class="col-lg-6 col-md-6 cc-reference-header"><img src="images/reference-image-1.jpg" alt="Image"/>
+              <div class="col-lg-6 col-md-6 cc-reference-header"><img src="images/1.jpg" alt="Image"/>
                 <div class="h5 pt-2">Ingenière</div>
                 <p class="category">Construction</p>
               </div>
@@ -485,7 +485,7 @@
           </div>
           <div class="carousel-item">
             <div class="row">
-              <div class="col-lg-6 col-md-6 cc-reference-header"><img src="images/reference-image-2.jpg" alt="Image"/>
+              <div class="col-lg-6 col-md-6 cc-reference-header"><img src="images/4.jpg" alt="Image"/>
                 <div class="h5 pt-2">Ingenière</div>
                 <p class="category">Mines et Geologie</p>
               </div>
@@ -497,7 +497,7 @@
           </div>
          <div class="carousel-item">
             <div class="row">
-              <div class="col-lg-6 col-md-6 cc-reference-header"><img src="images/reference-image-2.jpg" alt="Image"/>
+              <div class="col-lg-6 col-md-6 cc-reference-header"><img src="images/2.jpg" alt="Image"/>
                 <div class="h5 pt-2">Ingenière</div>
                 <p class="category">Mines et Geologie</p>
               </div>
@@ -513,7 +513,7 @@
   </div>
 </div>
 <div class="section" id="contact">
-  <div class="cc-contact-information" style="background-image: url('images/staticmap.png');">
+  <div class="cc-contact-information" style="background-image: url('images/project-2.jpg');">
     <div class="container">
       <div class="cc-contact">
         <div class="row">
