--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/project-2.jpg');"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/6.jpg" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images/1.jpg" alt="Image"/></a></div>
           <div class="h2 title">MURHULA KALALA Lucien</div>
           <p class="category text-white">Web Developer, Graphic Designer, Translator</p>
           <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Engager Moi</a>
@@ -523,22 +523,8 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="card-body">
-                    <form action="https://formspree.io/murhulakalalalucien14@gmail.com" method="POST">
+                    <form action="https://formspree.io/f/mknkyenl" method="POST">
                       <div class="p pb-3"><strong>Contact Moi. </strong></div>
-                      <div class="row mb-3">
-                        <div class="col">
-                          <div class="input-group"><span class="input-group-addon"><i class="fa fa-user-circle"></i></span>
-                            <input class="form-control" type="text" name="name" placeholder="Nom" required="required"/>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row mb-3">
-                        <div class="col">
-                          <div class="input-group"><span class="input-group-addon"><i class="fa fa-file-text"></i></span>
-                            <input class="form-control" type="text" name="Subject" placeholder="Sujet" required="required"/>
-                          </div>
-                        </div>
-                      </div>
                       <div class="row mb-3">
                         <div class="col">
                           <div class="input-group"><span class="input-group-addon"><i class="fa fa-envelope"></i></span>
