--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="col-lg-12 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">PROFILE</div>
-            <p>Co-fondateur de la platform termiteHub, membre actif du groupe perspective Game et fessant partie du satff de la société CTLCO/SARL.</p>
+            <p>Co-fondateur de la platform termiteHub, membre actif du groupe perspective Game et faisant partie du staff de la société CTLCO/SARL.</p>
             <p>Je suis un développeur full stuck avec des connaissances de la nouvelle technologie et de ces caractéristiques, son évolution au quotidien et des progrès dont subit cette firme chaque jour ayant aussi la compétence à suivre cette évolution du jour au jour. <a href="" target="_blank">En savoir Plus.</a></p>
           </div>
         </div>
@@ -96,7 +96,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-6"><strong class="text-uppercase">Langues:</strong></div>
-              <div class="col-sm-6">Francais, Englais, Kishwahili, Mashi</div>
+              <div class="col-sm-6">Francais, Anglais, Kishwahili, Mashi</div>
             </div>
           </div>
         </div>
