--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="css/aos.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="images/avantor.png">
   </head>
   <body id="top">
     <header>
@@ -50,7 +51,11 @@
       </div>
       <div class="section">
         <div class="container">
-          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
+          <div class="button-container">
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/lmkkalala/" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/LmkKalala" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://murhulakalalalucien14@gmail.com" rel="tooltip" title="Follow me on Google+"><i class="fa fa-google-plus"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.instagram.com/lmk_kalala/" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
         </div>
       </div>
     </div>
@@ -473,19 +478,19 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="row">
-              <div class="col-lg-6 col-md-6 cc-reference-header"><img src="images/1.jpg" alt="Image"/>
+              <div class="col-lg-6 col-md-6 cc-reference-header"><img src="images/avantor.png" alt="Image"/>
                 <div class="h5 pt-2">Ingenière</div>
                 <p class="category">Construction</p>
               </div>
               <div class="col-lg-6 col-md-6">
-                <p>Jean Balihamwabo Murangiza Requin</p>
+                <p>Jean Balihamwabo Murangiza</p>
                 <p>+243 998623291</p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="row">
-              <div class="col-lg-6 col-md-6 cc-reference-header"><img src="images/1.jpg" alt="Image"/>
+              <div class="col-lg-6 col-md-6 cc-reference-header"><img src="images/avantor.png" alt="Image"/>
                 <div class="h5 pt-2">Ingenière</div>
                 <p class="category">Mines et Geologie</p>
               </div>
@@ -497,13 +502,13 @@
           </div>
          <div class="carousel-item">
             <div class="row">
-              <div class="col-lg-6 col-md-6 cc-reference-header"><img src="images/1.jpg" alt="Image"/>
+              <div class="col-lg-6 col-md-6 cc-reference-header"><img src="images/avantor.png" alt="Image"/>
                 <div class="h5 pt-2">Ingenière</div>
-                <p class="category">Mines et Geologie</p>
+                <p class="category">Télécommunication</p>
               </div>
               <div class="col-lg-6 col-md-6">
-                <p>Zihindula Kalala Guylain</p>
-                <p>+243 991273686</p>
+                <p>Moise Tunda</p>
+                <p>+243 994784034</p>
               </div>
             </div>
           </div>
@@ -524,7 +529,7 @@
                 <div class="col-md-6">
                   <div class="card-body">
                     <form action="https://formspree.io/f/mknkyenl" method="POST">
-                      <div class="p pb-3"><strong>Contact Moi. </strong></div>
+                      <div class="p pb-3"><strong>Contacter Moi. </strong></div>
                       <div class="row mb-3">
                         <div class="col">
                           <div class="input-group"><span class="input-group-addon"><i class="fa fa-envelope"></i></span>
@@ -567,7 +572,11 @@
 </div></div>
     </div>
     <footer class="footer">
-      <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
+      <div class="container text-center">
+        <a class="cc-facebook btn btn-link" href="https://www.facebook.com/lmkkalala/"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a>
+        <a class="cc-twitter btn btn-link " href="https://twitter.com/LmkKalala"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a>
+        <a class="cc-google-plus btn btn-link" href="https://murhulakalalalucien14@gmail.com"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a>
+        <a class="cc-instagram btn btn-link" href="https://www.instagram.com/lmk_kalala/"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
       <div class="h4 title text-center">MURHULA KALALA Lucien</div>
       <div class="text-center text-muted">
         <p>&copy; LMK. All rights reserved.<br>Design - <a class="credit" href="" target="_blank">TermiteHub</a></p>
