--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="cc-profile-image"><a href="#"><img src="images/1.jpg" alt="Image"/></a></div>
           <div class="h2 title">MURHULA KALALA Lucien</div>
           <p class="category text-white">Web Developer, Graphic Designer, Translator</p>
-          <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Engager Moi</a>
+          <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contacter Moi.</a>
           <!-- <a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a> -->
         </div>
       </div>
