--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/1.jpg" alt="Image"/></a></div>
           <div class="h2 title">MURHULA KALALA Lucien</div>
-          <p class="category text-white">Web Developer, Graphic Designer, Translator</p>
+          <p class="category text-white" style="font-size:13px;">Web Developer, Graphic Designer, French To English Translator</p>
           <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contacter Moi.</a>
           <!-- <a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a> -->
         </div>
@@ -71,7 +71,7 @@
           <div class="card-body">
             <div class="h4 mt-0 title">PROFILE</div>
             <p>Co-fondateur de la platform termiteHub, membre actif du groupe perspective Game et faisant partie du staff de la société CTLCO/SARL.</p>
-            <p>Je suis un développeur full stuck avec des connaissances de la nouvelle technologie et de ces caractéristiques, son évolution au quotidien et des progrès dont subit cette firme chaque jour ayant aussi la compétence à suivre cette évolution du jour au jour. <a href="" target="_blank">En savoir Plus.</a></p>
+            <p>Je suis un développeur full stuck avec des connaissances de la nouvelle technologie et de ces caractéristiques, son évolution au quotidien et des progrès dont subit cette derniére chaque jour ayant aussi la compétence à suivre cette évolution du jour au jour. <a href="" target="_blank">En savoir Plus.</a></p>
           </div>
         </div>
       </div>
@@ -479,7 +479,7 @@
           <div class="carousel-item active">
             <div class="row">
               <div class="col-lg-6 col-md-6 cc-reference-header"><img src="images/avantor.png" alt="Image"/>
-                <div class="h5 pt-2">Ingenière</div>
+                <div class="h5 pt-2">Ingenieur</div>
                 <p class="category">Construction</p>
               </div>
               <div class="col-lg-6 col-md-6">
@@ -491,7 +491,7 @@
           <div class="carousel-item">
             <div class="row">
               <div class="col-lg-6 col-md-6 cc-reference-header"><img src="images/avantor.png" alt="Image"/>
-                <div class="h5 pt-2">Ingenière</div>
+                <div class="h5 pt-2">Ingenieur</div>
                 <p class="category">Mines et Geologie</p>
               </div>
               <div class="col-lg-6 col-md-6">
@@ -503,7 +503,7 @@
          <div class="carousel-item">
             <div class="row">
               <div class="col-lg-6 col-md-6 cc-reference-header"><img src="images/avantor.png" alt="Image"/>
-                <div class="h5 pt-2">Ingenière</div>
+                <div class="h5 pt-2">Ingenieur</div>
                 <p class="category">Télécommunication</p>
               </div>
               <div class="col-lg-6 col-md-6">
@@ -579,7 +579,7 @@
         <a class="cc-instagram btn btn-link" href="https://www.instagram.com/lmk_kalala/"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
       <div class="h4 title text-center">MURHULA KALALA Lucien</div>
       <div class="text-center text-muted">
-        <p>&copy; LMK. All rights reserved.<br>Design - <a class="credit" href="" target="_blank">TermiteHub</a></p>
+        <p>&copy; Copyright. All rights reserved.<br>Designed by - <a class="credit" href="" target="_blank">Lucien Murhula Kalala</a></p>
       </div>
     </footer>
     <script src="js/core/jquery.3.2.1.min.js"></script>
