--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">Profile</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Competences</a></li>
-                <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li> -->
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="">Portfolio</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
               </ul>
@@ -42,7 +42,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/project-2.jpg');"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/1.jpg" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images/1x.jpg" alt="Image"/></a></div>
           <div class="h2 title">MURHULA KALALA Lucien</div>
           <p class="category text-white" style="font-size:13px;">Web Developer, Graphic Designer, French To English Translator</p>
           <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contacter Moi.</a>
@@ -84,7 +84,7 @@
             <div class="h4 mt-0 title">Information Basique</div>
             <div class="row">
               <div class="col-sm-6"><strong class="text-uppercase">AGE:</strong></div>
-              <div class="col-sm-6">22 Ans</div>
+              <div class="col-sm-6">23 Ans</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-6"><strong class="text-uppercase">Email:</strong></div>
@@ -101,7 +101,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-6"><strong class="text-uppercase">Langues:</strong></div>
-              <div class="col-sm-6">Francais, Anglais, Kishwahili, Mashi</div>
+              <div class="col-sm-6">Francais, Anglais, Kishwahili, Mashi, Lingala</div>
             </div>
           </div>
         </div>
@@ -211,6 +211,13 @@
           </div>
           <div class="col-md-12">
             <div class="progress-container progress-primary"><span class="progress-badge">SQL</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="progress-container progress-primary"><span class="progress-badge">MYSQL</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
               </div>
@@ -361,9 +368,8 @@
 <div class="section" id="experience">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Experience Professionnelle</div>
-<div class="row">
-
-    <div class="col-md-5 card">
+<div class="row d-flex justify-content-center">
+    <div class="col-md-8 card">
       <div class="row">
         <div class="col-md-6 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
@@ -379,8 +385,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-1"></div>
-    <div class="col-md-5 card">
+    <div class="col-md-8 card">
       <div class="row">
         <div class="col-md-6 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
@@ -395,8 +400,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-1"></div>
-    <div class="col-md-5 card">
+    <div class="col-md-8 card">
       <div class="row">
         <div class="col-md-6 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
@@ -440,7 +444,7 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2017 - 2021</p>
+            <p>2017 - 2020</p>
             <div class="h6">Diplome Universitaire</div>
           </div>
         </div>
@@ -474,8 +478,8 @@
 <div class="section" id="reference">
   <div class="container cc-reference">
     <div class="h4 mb-4 text-center title">Personnes de references</div>
-    <div class="col-md-6"></div>
-    <div class="col-md-6 card" data-aos="zoom-in">
+    <div class="row d-flex justify-content-center">
+      <div class="col-md-6 card" data-aos="zoom-in">
       <div class="carousel slide" id="cc-Indicators" data-ride="carousel">
         <ol class="carousel-indicators">
           <li class="active" data-target="#cc-Indicators" data-slide-to="0"></li>
@@ -521,6 +525,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
   </div>
 </div>
