--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">Profile</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Competences</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="">Portfolio</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="https://lucienkalala.github.io/PersonalPage/">Portfolio EN</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
               </ul>
