--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/lmkkalala/" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a>
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/LmkKalala" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://murhulakalalalucien14@gmail.com" rel="tooltip" title="Follow me on Google+"><i class="fa fa-google-plus"></i></a>
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.instagram.com/lmk_kalala/" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.instagram.com/lmkkalala/" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
         </div>
       </div>
     </div>
@@ -588,7 +588,7 @@
         <a class="cc-facebook btn btn-link" href="https://www.facebook.com/lmkkalala/"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a>
         <a class="cc-twitter btn btn-link " href="https://twitter.com/LmkKalala"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a>
         <a class="cc-google-plus btn btn-link" href="https://murhulakalalalucien14@gmail.com"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a>
-        <a class="cc-instagram btn btn-link" href="https://www.instagram.com/lmk_kalala/"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
+        <a class="cc-instagram btn btn-link" href="https://www.instagram.com/lmkkalala/"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
       <div class="h4 title text-center">MURHULA KALALA Lucien</div>
       <div class="text-center text-muted">
         <p>&copy; Copyright. All rights reserved.<br>Designed by - <a class="credit" href="" target="_blank">Lucien Murhula Kalala</a></p>
